<resources>
    <string name="app_name">MarketApp</string>
    <string name="title">FORMULARIO</string>
    <string name="input_name">Ingrese sus nombres</string>
    <string name="input_number">Ingrese su número de documento</string>
    <string name="dni">DNI</string>
    <string name="carnet">Carnet de Extranjería</string>
    <string name="send">Enviar</string>
    <string name="warning_name">Enter names</string>
    <string name="warning_document">Enter document number</string>
    <string name="course">Course</string>
    <string name="enrollment">Enrollment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="curso">CURSO</string>

    <!--Project-->
    <!--Screen Login-->
    <string name="fragment_login_title">Iniciar Sesión</string>
    <string name="fragment_login_email">Correo Electrónico</string>
    <string name="fragment_login_password">Constraseña</string>
    <string name="fragment_login_signIn">Ingresar</string>
    <string name="fragment_login_rememberAccount">Recordar mi cuenta</string>
    <string name="fragment_login_createAccount">Crear mi cuenta</string>
    <string name="fragment_login_forgetPassword">Olvidé mi contraseña?</string>

    <!--    Screen Register-->
    <string name="fragment_register_names">Nombres</string>
    <string name="fragment_register_surname">Apellidos</string>
    <string name="fragment_register_email">Correo</string>
    <string name="fragment_register_phone">Celular</string>
    <string name="fragment_register_gender">Género</string>
    <string name="fragment_register_document">Numero de documento</string>
    <string name="fragment_register_password">Contraseña</string>
    <string name="fragment_register_terms">Acepto los términos y condiciones</string>
    <string name="fragment_register_register">Crear cuenta</string>
    <string name="fragment_register_title">Crear cuenta</string>
    <string name="fragment_register_validation_names">Debe ingresar sus nombre</string>
    <string name="fragment_register_validation_surnames">Debe ingresar sus apellidos</string>
    <string name="fragment_register_validation_email">Debe ingresar su correo electrónico</string>
    <string name="fragment_register_validation_phone">Debe ingresar su número celular</string>
    <string name="fragment_register_validation_numDoc">Debe ingresar su número de documento</string>
    <string name="fragment_register_validation_password">Debe ingresar una contraseña</string>
    <string name="fragment_login_validation_email">Debe ingresar su correo electrónico</string>
    <string name="fragment_login_validation_password">Debe ingresar una contraseña</string>
    <string name="fragment_register_validation_terms_conditions">Debe aceptar los términos y condiciones</string>
    <string name="activity_menu_title">Bienvenido</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_order">Mis compras</string>
    <string name="fragment_detail_product_features">Características</string>
    <string name="menu_register_category">Registrar Cat.</string>
    <string name="fragment_register_categories_name">Ingrese el nombre</string>
    <string name="fragment_register_categories_camera">Camara</string>
    <string name="fragment_register_categories_gallery">Galería</string>
    <string name="fragment_register_categories_save">Guardar</string>
    <string name="menu_maps">Mapas</string>
    <string name="message_version">Hemos detectado que se encuentra disponible una nueva versión de la aplicación. Te recomendamos actualizarla ya que trae muchas novedades y mejoras. Solo te tomará unos minutos</string>
    <string name="dialog_version_later">Más tarde</string>
    <string name="dialog_version_update">Actualizar</string>
    <string name="fragment_detail_minus">-</string>
    <string name="fragment_detail_plus">+</string>
    <string name="fragment_detail_add">Agregar</string>
    <string name="fragment_order_total">TOTAL A PAGAR</string>
    <string name="fragment_orders_check_in">CHECK IN</string>
    <string name="fragment_orders_compras">MIS COMPRAS</string>
    <string name="dialog_update_close">Salir</string>
    <string name="dialog_updater_title">Actualiza tu Producto</string>
    <string name="dialog_update_amount">Cantidad</string>
    <string name="fragment_payment_title">Realizar Pago</string>
    <string name="fragment_payment_direction">Dirección</string>
    <string name="fragment_payment_home">Casa</string>
    <string name="fragment_payment_office">Oficina</string>
    <string name="fragment_payment_other">Otro</string>
    <string name="fragment_payment_reference">Referencia</string>
    <string name="fragment_payment_district">Distrito</string>
    <string name="fragment_payment_date">Fecha</string>
    <string name="fragment_payment_time">Hora</string>
    <string name="fragment_payment_yape">Contraentrega Yape</string>
    <string name="fragment_payment_plin">Contraentrega Plin</string>
    <string name="fragment_payment_cash">Efectivo</string>
    <string name="fragment_payment_amount">Monto con el que va a pagar</string>
    <string name="fragment_payment_pay_button">Realizar pago</string>
    <string name="fragment_payment_type">Tipo de pago</string>
    <string name="fragment_orders_empty_list">No tienes compras registradas</string>
    <string name="dialog_payment_order">Orden de compra:</string>
    <string name="dialog_payment_message">Enhorabuena! Su compra se registró correctamente</string>
    <string name="dialog_payment_title">Felicitaciones</string>
</resources>